# raylib-bazel

./: MODULE.bazel
raylib-bazel/: BUILD  raylib-bazel.cpp
