'''
MODULE.bazel
'''

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")

register_toolchains(
    "@rules_foreign_cc//toolchains:built_ninja_toolchain"
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "raylib",
    urls = ["https://github.com/raysan5/raylib/archive/refs/tags/5.0.zip"],
    integrity = "sha256-cB+S8GRvvxzsXsw7vJ0n1lEaPJFjwe+KZ5sVR0zoVPU=",
    strip_prefix = "raylib-5.0",
    build_file = "@//third_party/raylib:BUILD",
)